# insight_engine_core

./: .gitignore  pyproject.toml
insight_engine_core/: config.py
insight_engine_core/database/: __init__.py  db_utils.py  models.py  vector_store.py
insight_engine_core/ingestion/: base_connector.py
insight_engine_core/llm_interface/: base_llm.py  ollama_llm.py  openai_llm.py
insight_engine_core/processing/: embedder.py  text_processor.py
insight_engine_core/rag/: generator.py  retriever.py
tests/: conftest.py
tests/database/: test_vector_store.py  test_vector_store_integration.py
tests/llm_interface/: test_ollama_llm.py  test_openai_llm.py
tests/processing/: test_embedder.py  test_text_processor.py
tests/rag/: test_generator.py  test_rag_pipeline_integration.py  test_retriever.py
